New Feature Deployment Workflow

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
     <div class="main-content">
         {{>header}}
         <p>This site was created by Renay Earnshaw</p>
-        <p>It uses data from mapbox.com and darksky.net</p>
+        <p>It uses data from <i>mapbox.com</i> and <i>darksky.net</i></p>
         <img class="portrait" src="/img/robot.png">
     </div>
     {{>footer}}
